Fix code blocks scrollbars issue

--- a/source/css/partial/_highlight.styl
+++ b/source/css/partial/_highlight.styl
@@ -34,7 +34,7 @@ $highlight-purple       = #8959a8
   font-family Consolas, "Liberation Mono", Menlo, Courier, monospace
   font-size 85%
   line-height 1.45
-  overflow-x: scroll
+  overflow: auto
 
 // Syntax Highlighting
 pre
